# space-conquest

./: .dockerignore  docker-compose.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/migration/: .gitignore  Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260109_001344_add_construction_time.rs  m20260109_002654_add_other_resources.rs  m20260109_003719_add_construction_type.rs  m20260109_005503_add_fleet_and_shipyard.rs  m20260109_013834_update_planet_table.rs  m20260109_014709_create_user_table.rs  m20260109_023850_add_ships_and_pending_system.rs  m20260109_195343_add_unread_report.rs  m20260109_200503_create_combat_log.rs  m20260109_202322_add_espionage.rs  m20260109_210008_add_password.rs  m20260109_211546_add_defenses.rs  m20260109_220528_add_debris.rs  m20260109_222210_add_coordinates.rs
backend/src/: auth.rs  combat.rs  game_logic.rs  main.rs
backend/src/entities/: combat_log.rs  mod.rs  planet.rs  prelude.rs  user.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AttackModal.tsx  CombatModal.tsx  Defenses.tsx  EmpireBar.tsx  ExpeditionZone.tsx  GalaxyView.tsx  Leaderboard.tsx  Login.tsx  PlanetOverview.tsx  ReportsTerminal.tsx  ResourceDisplay.tsx  Shipyard.tsx  StarMap.tsx  TechTree.tsx
