[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# SeaORM migration tool
sea-orm-migration = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[lib]
name = "migration"
path = "src/lib.rs"